# kids-art

./: .gitignore  ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  DEFS.h  PT-Project.vcxproj  PT-Project.vcxproj.filters  README.md  SwitchToDrawAction.cpp  SwitchToDrawAction.h  SwitchToPlayAction.cpp  SwitchToPlayAction.h  TestCode.cpp  ahmed amr  loay  main.cpp  omar
Actions/: Action.h  AddCircleAction.cpp  AddCircleAction.h  AddHexagonAction.cpp  AddHexagonAction.h  AddRectAction.cpp  AddRectAction.h  AddSquareAction.cpp  AddSquareAction.h  AddTriangleAction.cpp  AddTriangleAction.h  ChangeBackgroundColorAction.cpp  ChangeBackgroundColorAction.h  ChangeBorderWidthAction.cpp  ChangeBorderWidthAction.h  ChangeFillColorAction.cpp  ChangeFillColorAction.h  ChangeOutlineColorAction.cpp  ChangeOutlineColorAction.h  ClearAllAction.cpp  ClearAllAction.h  DeleteAction.cpp  DeleteAction.h  DragMoveAction.cpp  DragMoveAction.h  DragResizeAction.cpp  DragResizeAction.h  ExitAction.cpp  ExitAction.h  LoadAction.cpp  LoadAction.h  MoveAction.cpp  MoveAction.h  PickByColorAction.cpp  PickByColorAction.h  PickByShapeAction.cpp  PickByShapeAction.h  PickByShapeAndColorAction.cpp  PickByShapeAndColorAction.h  PickColor.cpp  (+26 more)
CMUgraphicsLib/: CMUgraphics.cpp  colors.cpp  colors.h
Containers/: ActionStack.cpp  ActionStack.h  FigureList.cpp  FigureList.h  List.h  RecordedActionList.cpp  RecordedActionList.h  UndoableActionStack.cpp  UndoableActionStack.h
Figures/: CCircle.cpp  CCircle.h  CFigure.cpp  CFigure.h  CHexagon.cpp  CHexagon.h  CRectangle.cpp  CRectangle.h  CSquare.cpp  CSquare.h  CTriangle.cpp  CTriangle.h
GUI/: Input.cpp  Input.h  Output.cpp  Output.h  UI_Info.h
Save Files/: Omar
