cmake_minimum_required(VERSION 3.27)
project(kids_art)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Actions)
include_directories(CMUgraphicsLib)
include_directories(CMUgraphicsLib/jpeg)
include_directories(Containers)
include_directories(Figures)
include_directories(GUI)


add_executable(kids_art
        Actions/Action.h
        Actions/AddCircleAction.cpp
        Actions/AddCircleAction.h
        Actions/AddHexagonAction.cpp
        Actions/AddHexagonAction.h
        Actions/AddRectAction.cpp
        Actions/AddRectAction.h
        Actions/AddSquareAction.cpp
        Actions/AddSquareAction.h
        Actions/AddTriangleAction.cpp
        Actions/AddTriangleAction.h
        Actions/ChangeBackgroundColorAction.cpp
        Actions/ChangeBackgroundColorAction.h
        Actions/ChangeFillColorAction.cpp
        Actions/ChangeFillColorAction.h
        Actions/ChangeOutlineColorAction.cpp
        Actions/ChangeOutlineColorAction.h
        Actions/ClearAllAction.cpp
        Actions/ClearAllAction.h
        Actions/DeleteAction.cpp
        Actions/DeleteAction.h
        Actions/DragMoveAction.cpp
        Actions/DragMoveAction.h
        Actions/ExitAction.cpp
        Actions/ExitAction.h
        Actions/LoadAction.cpp
        Actions/LoadAction.h
        Actions/MoveAction.cpp
        Actions/MoveAction.h
        Actions/PickByColorAction.cpp
        Actions/PickByColorAction.h
        Actions/PickByShapeAction.cpp
        Actions/PickByShapeAction.h
        Actions/PickByShapeAndColorAction.cpp
        Actions/PickByShapeAndColorAction.h
        Actions/PlayRecordingAction.cpp
        Actions/PlayRecordingAction.h
        Actions/RedoAction.cpp
        Actions/RedoAction.h
        Actions/SaveAction.cpp
        Actions/SaveAction.h
        Actions/SelectAction.cpp
        Actions/SelectAction.h
        Actions/StartRecordingAction.cpp
        Actions/StartRecordingAction.h
        Actions/StopRecordingAction.cpp
        Actions/StopRecordingAction.h
        Actions/SwitchToDrawAction.cpp
        Actions/SwitchToDrawAction.h
        Actions/SwitchToPlayAction.cpp
        Actions/SwitchToPlayAction.h
        Actions/ToggleSoundAction.cpp
        Actions/ToggleSoundAction.h
        Actions/UndoableAction.h
        Actions/UndoableFigureAction.cpp
        Actions/UndoableFigureAction.h
        Actions/UndoAction.cpp
        Actions/UndoAction.h
        CMUgraphicsLib/jpeg/jcomapi.c
        CMUgraphicsLib/jpeg/jconfig.h
        CMUgraphicsLib/jpeg/jcparam.c
        CMUgraphicsLib/jpeg/jdapimin.c
        CMUgraphicsLib/jpeg/jdapistd.c
        CMUgraphicsLib/jpeg/jdatasrc.c
        CMUgraphicsLib/jpeg/jdcoefct.c
        CMUgraphicsLib/jpeg/jdcolor.c
        CMUgraphicsLib/jpeg/jdct.h
        CMUgraphicsLib/jpeg/jddctmgr.c
        CMUgraphicsLib/jpeg/jdhuff.c
        CMUgraphicsLib/jpeg/jdhuff.h
        CMUgraphicsLib/jpeg/jdinput.c
        CMUgraphicsLib/jpeg/jdmainct.c
        CMUgraphicsLib/jpeg/jdmarker.c
        CMUgraphicsLib/jpeg/jdmaster.c
        CMUgraphicsLib/jpeg/jdmerge.c
        CMUgraphicsLib/jpeg/jdphuff.c
        CMUgraphicsLib/jpeg/jdpostct.c
        CMUgraphicsLib/jpeg/jdsample.c
        CMUgraphicsLib/jpeg/jdtrans.c
        CMUgraphicsLib/jpeg/jerror.c
        CMUgraphicsLib/jpeg/jerror.h
        CMUgraphicsLib/jpeg/jidctflt.c
        CMUgraphicsLib/jpeg/jidctfst.c
        CMUgraphicsLib/jpeg/jidctint.c
        CMUgraphicsLib/jpeg/jidctred.c
        CMUgraphicsLib/jpeg/jinclude.h
        CMUgraphicsLib/jpeg/jmemmgr.c
        CMUgraphicsLib/jpeg/jmemnobs.c
        CMUgraphicsLib/jpeg/jmemsys.h
        CMUgraphicsLib/jpeg/jmorecfg.h
        CMUgraphicsLib/jpeg/jpegint.h
        CMUgraphicsLib/jpeg/jpeglib.h
        CMUgraphicsLib/jpeg/jquant1.c
        CMUgraphicsLib/jpeg/jquant2.c
        CMUgraphicsLib/jpeg/jutils.c
        CMUgraphicsLib/jpeg/jversion.h
        CMUgraphicsLib/auxil.cpp
        CMUgraphicsLib/auxil.h
        CMUgraphicsLib/CMUgraphics.cpp
        CMUgraphicsLib/CMUgraphics.h
        CMUgraphicsLib/colors.cpp
        CMUgraphicsLib/colors.h
        CMUgraphicsLib/error.h
        CMUgraphicsLib/image.cpp
        CMUgraphicsLib/image.h
        CMUgraphicsLib/jpegload.c
        CMUgraphicsLib/jpegload.h
        CMUgraphicsLib/keyqueue.cpp
        CMUgraphicsLib/keyqueue.h
        CMUgraphicsLib/mousequeue.cpp
        CMUgraphicsLib/mousequeue.h
        CMUgraphicsLib/version.h
        CMUgraphicsLib/windowinput.cpp
        CMUgraphicsLib/windowinput.h
        Containers/List.h
        Containers/UndoableActionStack.cpp
        Containers/UndoableActionStack.h
        Figures/CCircle.cpp
        Figures/CCircle.h
        Figures/CFigure.cpp
        Figures/CFigure.h
        Figures/CHexagon.cpp
        Figures/CHexagon.h
        Figures/CRectangle.cpp
        Figures/CRectangle.h
        Figures/CSquare.cpp
        Figures/CSquare.h
        Figures/CTriangle.cpp
        Figures/CTriangle.h
        GUI/Input.cpp
        GUI/Input.h
        GUI/Output.cpp
        GUI/Output.h
        GUI/UI_Info.h
        ApplicationManager.cpp
        ApplicationManager.h
        DEFS.h
        main.cpp)

target_link_libraries(kids_art winmm.lib)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
file(COPY "images" DESTINATION ${CMAKE_BINARY_DIR})
file(COPY "sounds" DESTINATION ${CMAKE_BINARY_DIR})